--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -2544,7 +2544,153 @@
         </div>
     </details>
 </div>
+<section aria-labelledby="bolum-siyasi-haklar">
+    <h3 id="bolum-siyasi-haklar" class="subsection-title text-2xl font-bold mt-12 mb-4">
+        DÖRDÜNCÜ BÖLÜM: Siyasi Haklar ve Ödevler
+    </h3>
+    <div class="highlight-box mt-4 mb-8">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Bölüm Analizi</h6>
+        <p style="text-align: justify;" class="text-sm">Değerli aday, bu bölümde inceleyeceğimiz haklar, bir önceki bölümdeki "Sosyal ve Ekonomik Haklar"dan (İsteme Hakları) farklı bir niteliktedir. Bunlar, literatürdeki adıyla <strong>"Katılma Hakları"dır (Aktif Statü Hakları)</strong>. Bu haklar, bireye devletten bir hizmet "isteme" imkanı değil, bizzat devlet mekanizmasının işleyişine ve yönetimine "katılma" yetkisi verir. Vatandaşlığın tanımından başlayarak, oy kullanma ve siyasi parti kurma gibi en temel katılım yollarını bu bölümde göreceğiz.</p>
+    </div>
 
+    <!-- Madde 66 -->
+    <details id="madde-66" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 66 – Türk Vatandaşlığı
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                <strong>Türk Devletine vatandaşlık bağı ile bağlı olan herkes Türktür.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                <strong>Türk babanın veya Türk ananın çocuğu Türktür.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Vatandaşlık, <strong>kanunun gösterdiği şartlarla kazanılır ve ancak kanunda belirtilen hallerde kaybedilir.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Hiçbir Türk, <strong>vatana bağlılıkla bağdaşmayan bir eylemde bulunmadıkça vatandaşlıktan çıkarılamaz.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Vatandaşlıktan çıkarma ile ilgili karar ve işlemlere karşı <strong>yargı yolu kapatılamaz.</strong>
+            </blockquote>
+            <div class="highlight-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+                <p style="text-align: justify;" class="text-sm">Bu madde, Türkiye Cumhuriyeti'nin siyasi kimliğinin temelini atar ve vatandaşlığa dair 5 temel kural koyar:</p>
+                <ol class="list-decimal pl-5 space-y-1 text-sm">
+                    <li><strong>Anayasal Tanım:</strong> Tanım, ırk veya etnik kökene değil, tamamen hukuki bir bağa dayanır.</li>
+                    <li><strong>Kan Bağı (Jus Sanguinis):</strong> Anne veya babadan en az birinin Türk vatandaşı olması, çocuğun vatandaşlığı kazanması için yeterlidir.</li>
+                    <li><strong>Kanunilik İlkesi:</strong> Vatandaşlık işlemleri keyfi değil, kanuna dayalıdır.</li>
+                    <li><strong>Vatandaşlıktan Çıkarmanın Sınırı:</strong> Sadece "vatana bağlılıkla bağdaşmayan" eylemler gerekçe olabilir.</li>
+                    <li><strong>Yargı Yolu Güvencesi:</strong> Vatandaşlıktan çıkarma kararına karşı mahkeme yolu daima açıktır.</li>
+                </ol>
+            </div>
+        </div>
+    </details>
+
+    <!-- Madde 67 -->
+    <details id="madde-67" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 67 – Seçme, Seçilme ve Siyasi Faaliyette Bulunma Hakları
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Vatandaşlar, kanunda gösterilen şartlara uygun olarak seçme, seçilme ve bağımsız olarak veya bir siyasi parti içinde siyasi faaliyette bulunma ve halkoylamasına katılma hakkına sahiptir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Seçimler ve halkoylaması <strong>serbest, eşit, gizli, tek dereceli, genel oy, açık sayım ve döküm</strong> esaslarına göre, <strong>yargı yönetim ve denetimi altında</strong> yapılır. Ancak, yurt dışında bulunan Türk vatandaşlarının oy hakkını kullanabilmeleri amacıyla kanun, uygulanabilir tedbirleri belirler.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                <strong>Onsekiz yaşını dolduran</strong> her Türk vatandaşı seçme ve halkoylamasına katılma haklarına sahiptir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Bu hakların kullanılması kanunla düzenlenir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                <strong>Silah altında bulunan er ve erbaşlar ile askeri öğrenciler, taksirli suçlardan hüküm giyenler hariç ceza infaz kurumlarında bulunan hükümlüler oy kullanamazlar.</strong> Ceza infaz kurumları ve tutukevlerinde oy kullanılması ve oyların sayım ve dökümünde seçim emniyeti açısından alınması gerekli tedbirler Yüksek Seçim Kurulu tarafından tespit edilir ve görevli hakimin yerinde yönetim ve denetimi altında yapılır.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Seçim kanunları, temsilde adalet ve yönetimde istikrar ilkelerini bağdaştıracak biçimde düzenlenir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Seçim kanunlarında yapılan değişiklikler, <strong>yürürlüğe girdiği tarihten itibaren bir yıl içinde yapılacak seçimlerde uygulanmaz.</strong>
+            </blockquote>
+            <div class="strategy-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Seçimlerin 7 Temel İlkesi</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Bu liste, Anayasa Hukuku sınavlarının vazgeçilmezidir:</p>
+                <ol class="list-decimal pl-5 text-sm space-y-1">
+                    <li><strong>Serbest Oy:</strong> Baskı olmadan oy kullanma.</li>
+                    <li><strong>Eşit Oy:</strong> Herkesin bir oyu var ve her oy eşit değerde.</li>
+                    <li><strong>Gizli Oy:</strong> Oy kullanırken kimsenin görmemesi.</li>
+                    <li><strong>Tek Dereceli Seçim:</strong> Temsilcileri doğrudan seçme.</li>
+                    <li><strong>Genel Oy:</strong> Servet, ırk, cinsiyet gibi ayrımlar olmaması.</li>
+                    <li><strong>Açık Sayım ve Döküm:</strong> Sayımın şeffaf yapılması.</li>
+                    <li><strong>Yargı Yönetim ve Denetimi:</strong> YSK'nın denetimi.</li>
+                </ol>
+            </div>
+            <div class="warning-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>Sınavdaki En Büyük Çeldirici: Kimler Oy Kullanamaz?</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Anayasa, oy kullanamayacak kişileri net bir şekilde saymıştır. Bu listeyi ve özellikle istisnasını çok iyi bilin:</p>
+                <ul class="list-disc pl-5 text-sm space-y-1">
+                    <li>Silah altında bulunan er ve erbaşlar.</li>
+                    <li>Askeri öğrenciler.</li>
+                    <li><strong>Taksirli suçlar hariç</strong>, ceza infaz kurumlarındaki <strong>hükümlüler</strong> (mahkumlar).</li>
+                </ul>
+                <div class="highlight-box mt-4 p-3 bg-red-50 border-l-4 border-red-400">
+                    <p style="text-align: justify;" class="text-sm"><strong>ÇOK ÖNEMLİ NOT:</strong> Cezaevindeki <strong>TUTUKLULAR</strong>, masumiyet karinesi gereği suçlulukları kesinleşmediği için <strong>OY KULLANABİLİRLER!</strong> Hükümlü ile tutuklu ayrımı, sınavdaki en klasik tuzaktır.</p>
+                </div>
+            </div>
+        </div>
+    </details>
+
+    <!-- Madde 68 -->
+    <details id="madde-68" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 68 – Parti Kurma, Partilere Girme ve Partilerden Ayrılma
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Vatandaşlar, siyasi parti kurma ve usulüne göre partilere girme ve partilerden ayrılma hakkına sahiptir. Parti üyesi olabilmek için onsekiz yaşını doldurmuş olmak gerekir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Siyasi partiler, <strong>demokratik siyasi hayatın vazgeçilmez unsurlarıdır.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Siyasi partiler <strong>önceden izin almadan kurulurlar</strong> ve Anayasa ve kanun hükümleri içerisinde faaliyetlerini sürdürürler.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Siyasi partilerin tüzük ve programları ile eylemleri, Devletin bağımsızlığına, ülkesi ve milletiyle bölünmez bütünlüğüne, insan haklarına, eşitlik ve hukuk devleti ilkelerine, millet egemenliğine, demokratik ve laik Cumhuriyet ilkelerine aykırı olamaz; sınıf veya zümre diktatörlüğünü veya herhangi bir tür diktatörlüğü savunmayı ve yerleştirmeyi amaçlayamaz; suç işlenmesini teşvik edemez.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                <strong>Hakimler ve savcılar, Sayıştay dahil yüksek yargı organları mensupları, kamu kurum ve kuruluşlarının memur statüsündeki görevlileri, yaptıkları hizmet bakımından işçi niteliği taşımayan diğer kamu görevlileri, Silahlı Kuvvetler mensupları ile yükseköğretim öncesi öğrencileri siyasi partilere üye olamazlar.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Yüksek öğretim elemanlarının siyasi partilere üye olmaları ancak kanunla düzenlenebilir. Kanun bu elemanların, siyasi partilerin merkez organları dışında kalan parti görevi almalarına cevaz veremez ve parti üyesi yüksek öğretim elemanlarının yüksek öğretim kurumlarında uyacakları esasları belirler.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Yüksek öğretim öğrencilerinin siyasi partilere üye olabilmelerine ilişkin esaslar kanunla düzenlenir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Siyasi partilere, Devlet, yeterli düzeyde ve hakça mali yardım yapar. Partilere yapılacak yardımın, alacakları üye aidatının ve bağışların tabi olduğu esaslar kanunla düzenlenir.
+            </blockquote>
+            <div class="strategy-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Siyasi Partiye Üye Olamayacaklar Listesi</h6>
+                <p style="text-align: justify;" class="text-sm">Bu liste, sınavlarda en sık sorulan bölümlerdendir. Aşağıdaki meslek grupları siyasi partilere üye olamazlar:</p>
+                <ul class="list-disc pl-5 text-sm space-y-1">
+                    <li>Hâkimler ve savcılar</li>
+                    <li>Sayıştay dahil yüksek yargı organları mensupları</li>
+                    <li>Memurlar ve işçi niteliği taşımayan diğer kamu görevlileri</li>
+                    <li>Silahlı Kuvvetler mensupları</li>
+                    <li>Yükseköğretim öncesi öğrenciler (lise öğrencileri vb.)</li>
+                </ul>
+                 <div class="highlight-box mt-4 p-3 bg-sky-50 border-l-4 border-sky-400">
+                    <p style="text-align: justify;" class="text-sm"><strong>Özel Not:</strong> Yükseköğretim elemanları (akademisyenler) ve yükseköğretim öğrencileri (üniversite öğrencileri) ise kanunda belirtilen şartlar dahilinde partilere üye <strong>olabilirler</strong>. Bu ayrım çok önemlidir.</p>
+                </div>
+            </div>
+        </div>
+    </details>
+</section>
+                
 
                 
 </section>
