--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -615,14 +615,15 @@
         </div>
     </details>
 </section>
-<!-- İKİNCİ BÖLÜM: Kişinin Hakları ve Ödevleri -->
+<!-- İKİNCİ BÖLÜM: Kişinin Hakları ve Ödevleri - BÖLÜM ANALİZİ -->
 <section aria-labelledby="bolum-kisinin-haklari">
     <h3 id="bolum-kisinin-haklari" class="subsection-title text-2xl font-bold mt-12 mb-4">
         İKİNCİ BÖLÜM: Kişinin Hakları ve Ödevleri
     </h3>
-    <p class="text-slate-600 mb-6" style="text-align: justify;">
-        Bu bölümde yer alan haklar, bireyi devlete ve topluma karşı koruyan, devletin müdahale edemeyeceği özel alanı çizen haklardır. "Koruyucu Haklar" olarak da bilinirler. Devletin bu haklara karşı temel görevi "gölge etmemek", yani dokunmamaktır.
-    </p>
+    <div class="highlight-box mt-4 mb-8">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Bölüm Analizi</h6>
+        <p style="text-align: justify;" class="text-sm">Değerli aday, Anayasa'daki temel hakların ilk ve en temel kategorisine giriş yapıyoruz. Bunlar, literatürdeki adıyla <strong>"Koruyucu Haklar"dır (Negatif Statü Hakları)</strong>. Bu hakların temel felsefesi, bireyi devletin ve diğer kişilerin müdahalesine karşı koruyan bir "kalkan" oluşturmaktır. Burada vatandaş devlete adeta <strong>"Dokunma!"</strong> der. Devletin temel görevi, bu haklara karışmamak, müdahale etmemek, yani pasif kalmaktır. Yaşama hakkından özel hayatın gizliliğine, din ve vicdan hürriyetinden adil yargılanma güvencelerine kadar bireyin kişisel özerklik alanını çizen en temel hakları bu bölümde göreceğiz.</p>
+    </div>
 
     <!-- Madde 17 -->
     <details id="madde-17" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -1668,11 +1669,15 @@
         </div>
     </details>
 </div>
-                <section aria-labelledby="bolum-sosyal-ekonomik">
-  <h3 id="bolum-sosyal-ekonomik" class="subsection-title text-2xl font-bold mt-12 mb-4">ÜÇÜNCÜ BÖLÜM: Sosyal ve Ekonomik Haklar ve Ödevler</h3>
-  <p class="text-slate-600 mb-6" style="text-align: justify;">
-    Bu bölüm, bireyin sadece siyasal değil, aynı zamanda <strong>sosyal ve ekonomik alanlarda korunmasını</strong> sağlayan hakları düzenler. Ailenin devlet tarafından korunması, çocuk hakları, eğitim hakkı gibi temel toplumsal yapı taşları bu maddelerde yer alır. Özellikle <strong>Madde 42</strong>, GYS’de hem bilgi hem yorum sorularının yoğun çıktığı bir madde olup, "Atatürk ilkeleri", "öğretim hürriyeti", "zorunlu eğitim", "özel okullar" gibi kavramlar sıkça sorgulanır.
-  </p>
+<!-- ÜÇÜNCÜ BÖLÜM: Sosyal ve Ekonomik Haklar ve Ödevler - BÖLÜM ANALİZİ -->
+<section aria-labelledby="bolum-sosyal-ekonomik">
+    <h3 id="bolum-sosyal-ekonomik" class="subsection-title text-2xl font-bold mt-12 mb-4">
+        ÜÇÜNCÜ BÖLÜM: Sosyal ve Ekonomik Haklar ve Ödevler
+    </h3>
+    <div class="highlight-box mt-4 mb-8">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Bölüm Analizi</h6>
+        <p style="text-align: justify;" class="text-sm">Değerli aday, bireyi devlete karşı koruyan hakları öğrendikten sonra, şimdi devletin rolünün tamamen değiştiği bir alana geçiyoruz. Bunlar, literatürdeki adıyla <strong>"İsteme Hakları"dır (Pozitif Statü Hakları)</strong>. Bu hakların temel felsefesi, devletin pasif bir koruyucudan, aktif bir hizmet sağlayıcıya dönüşmesidir. Burada vatandaş devlete <strong>"Yap! Ver! Sağla!"</strong> der. Devletin temel görevi, sosyal adaleti ve refahı sağlamak için pozitif eylemlerde bulunmaktır. Ailenin korunmasından eğitim ve sağlık hakkına, çalışma hayatından sosyal güvenliğe kadar "Sosyal Devlet" ilkesinin somut yansımalarını bu bölümde göreceğiz.</p>
+    </div>
 
   <!-- Madde 41 -->
   <details id="madde-41" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -2544,13 +2549,14 @@
         </div>
     </details>
 </div>
+<!-- DÖRDÜNCÜ BÖLÜM: Siyasi Haklar ve Ödevler - BÖLÜM ANALİZİ -->
 <section aria-labelledby="bolum-siyasi-haklar">
     <h3 id="bolum-siyasi-haklar" class="subsection-title text-2xl font-bold mt-12 mb-4">
         DÖRDÜNCÜ BÖLÜM: Siyasi Haklar ve Ödevler
     </h3>
     <div class="highlight-box mt-4 mb-8">
         <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Bölüm Analizi</h6>
-        <p style="text-align: justify;" class="text-sm">Değerli aday, bu bölümde inceleyeceğimiz haklar, bir önceki bölümdeki "Sosyal ve Ekonomik Haklar"dan (İsteme Hakları) farklı bir niteliktedir. Bunlar, literatürdeki adıyla <strong>"Katılma Hakları"dır (Aktif Statü Hakları)</strong>. Bu haklar, bireye devletten bir hizmet "isteme" imkanı değil, bizzat devlet mekanizmasının işleyişine ve yönetimine "katılma" yetkisi verir. Vatandaşlığın tanımından başlayarak, oy kullanma ve siyasi parti kurma gibi en temel katılım yollarını bu bölümde göreceğiz.</p>
+        <p style="text-align: justify;" class="text-sm">Değerli aday, bu bölümde inceleyeceğimiz haklar, bir önceki bölümdeki "Sosyal ve Ekonomik Haklar"dan (İsteme Hakları) farklı bir niteliktedir. Bunlar, literatürdeki adıyla <strong>"Katılma Hakları"dır (Aktif Statü Hakları)</strong>. Bu haklar, bireye devletten bir hizmet "isteme" imkanı değil, bizzat devlet mekanizmasının işleyişine ve yönetimine <strong>"katılma"</strong> yetkisi verir. Vatandaşlığın tanımından başlayarak, oy kullanma ve siyasi parti kurma gibi en temel katılım yollarını bu bölümde göreceğiz.</p>
     </div>
 
     <!-- Madde 66 -->
