--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -57,12 +57,15 @@
             </div>
 
             <article class="konu-icerik">
-                <!-- BİRİNCİ KISIM: Genel Esaslar -->
-                <section aria-labelledby="genel-esaslar">
-                    <h2 id="genel-esaslar" class="section-title mt-16 mb-6">
-                        BİRİNCİ KISIM: Genel Esaslar
-                    </h2>
-
+                <!-- BİRİNCİ KISIM: Genel Esaslar - KISIM ANALİZİ -->
+<section aria-labelledby="genel-esaslar">
+    <h2 id="genel-esaslar" class="section-title mt-16 mb-6">
+        BİRİNCİ KISIM: Genel Esaslar
+    </h2>
+    <div class="highlight-box mt-4 mb-8">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Kısım Analizi</h6>
+        <p style="text-align: justify;" class="text-sm">Değerli aday, Anayasa öğrenimine bir binanın temelini atmak gibi başlıyoruz. Bu ilk kısım, üzerine diğer tüm kuralları inşa edeceğimiz <strong>devletin kimliğini, felsefesini ve hukuk sisteminin ana iskeletini</strong> tanımlar. Bu bölümdeki maddeler kısadır ama anlamları derindir. Devletin adının ne olduğundan (Madde 1), temel niteliklerine (Madde 2), değiştirilemez kurallarına (Madde 4), güçlerini nasıl kullandığına (Madde 7-9) ve hukukun en tepesinde neyin olduğuna (Madde 11) kadar tüm anayasal sistemin DNA'sını burada bulacaksınız. Bu bölümü anlayan, Anayasa'nın geri kalanını çok daha kolay yorumlar.</p>
+    </div>
                     <section aria-labelledby="bolum1-4">
                         <h3 id="bolum1-4" class="subsection-title text-2xl font-bold mt-12 mb-4">
                             BİRİNCİ BÖLÜM: Değiştirilemez Hükümler
@@ -475,20 +478,27 @@
         </div>
     </details>
 </div>
-</section> <!-- BU, BİRİNCİ KISIM: GENEL ESASLAR'ı BİTİREN SECTION ETİKETİDİR -->
+</section> 
 
-<!-- İKİNCİ KISIM: Temel Haklar ve Ödevler -->
+<!-- İKİNCİ KISIM: Temel Haklar ve Ödevler - KISIM ANALİZİ -->
 <h2 id="ikinci-kisim" class="section-title mt-16 mb-6">
     İKİNCİ KISIM: Temel Haklar ve Ödevler
 </h2>
+<div class="highlight-box mt-4 mb-8">
+    <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Kısım Analizi</h6>
+    <p style="text-align: justify;" class="text-sm">Değerli aday, devletin kimliğini öğrendikten sonra, şimdi de bu devlet ile onun varlık sebebi olan birey arasındaki ilişkiyi inceliyoruz. Bu kısım, Anayasa'nın en yaşayan ve bizi en doğrudan ilgilendiren bölümüdür. Burada, sahip olduğumuz temel hakların bir "kullanma kılavuzu" (Genel Hükümler), devlete karşı bizi koruyan bir "kalkan" (Kişinin Hakları), devletten hizmet beklediğimiz bir "talep listesi" (Sosyal ve Ekonomik Haklar) ve devlet yönetimine etki ettiğimiz bir "yetki belgesi" (Siyasi Haklar) bulacaksınız. Bu bölüm, Anayasa'nın bireyi merkeze aldığının en somut göstergesidir.</p>
+</div>
 
+<!-- BİRİNCİ BÖLÜM: Genel Hükümler - BÖLÜM ANALİZİ -->
 <section aria-labelledby="bolum-genel-hukumler">
     <h3 id="bolum-genel-hukumler" class="subsection-title text-2xl font-bold mt-12 mb-4">
         BİRİNCİ BÖLÜM: Genel Hükümler
     </h3>
-    <p class="text-slate-600 mb-6" style="text-align: justify;">
-        Bu bölüm, temel hak ve hürriyetlerin "kullanma kılavuzu" gibidir. Hakların niteliğini, hangi koşullarda sınırlanabileceğini, hangi olağanüstü durumlarda durdurulabileceğini ve bu durumlarda bile hangi "çekirdek haklara" asla dokunulamayacağını belirler. Sınavda yorum ve bilgi sorularının en sık geldiği alanlardan biridir.
-    </p>
+    <div class="highlight-box mt-4 mb-8">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Bölüm Analizi</h6>
+        <p style="text-align: justify;" class="text-sm">Değerli aday, bu kısa ama kritik bölüm, İkinci Kısım'da sayılacak olan tüm temel hak ve hürriyetlerin "Anayasası" gibidir. Yani, hakların genel niteliğini (devredilmez, dokunulmaz vb.), hangi şartlarda sınırlanabileceğini (Madde 13), hangi amaçlarla kullanılamayacağını (Madde 14) ve en önemlisi, savaş gibi olağanüstü durumlarda bile hangilerine asla dokunulamayacağını ("sert çekirdek haklar", Madde 15) belirleyen temel kuralları içerir. Buradaki ilkeleri anlamadan, diğer hakları doğru yorumlamak mümkün değildir.</p>
+    </div>
+
     <!-- Madde 12 -->
     <details id="madde-12" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
         <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
