--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -3196,6 +3196,103 @@
         </div>
     </div>
 </div>
+
+                <!-- Özel Çalışma: Anayasadaki Süreler ve Sayılar -->
+<div class="my-16 p-6 md:p-8 bg-sky-50 rounded-2xl border-t-8 border-sky-500 shadow-lg" role="region" aria-labelledby="anayasadaki-sureler">
+    <h3 id="anayasadaki-sureler" class="text-3xl md:text-4xl font-extrabold text-center mb-4 text-sky-800">
+        ÖZEL ÇALIŞMA: Anayasa'nın Kronometresi ve Cetveli
+    </h3>
+    <p class="text-center text-sky-700 max-w-3xl mx-auto mb-10">
+        Değerli aday, bu çalışma notu, Anayasa'nın soyut ilkelerinden ziyade, sınavda doğrudan bilgi olarak sorulan somut verilerine odaklanmıştır. Bu sayıları ve süreleri konularına göre gruplayarak ve hafıza kancaları oluşturarak öğreneceğiz.
+    </p>
+
+    <!-- BÖLÜM 1: SAATLERLE İFADE EDİLEN SÜREÇLER -->
+    <div class="mb-12">
+        <h4 class="text-2xl font-bold text-center mb-6 text-slate-800">Bölüm 1: Saatlerle İfade Edilen Süreçler (Acil Durum Kuralları)</h4>
+        <div class="highlight-box mt-4 p-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Hafıza Tekniği (24/48 Kuralı Analojisi):</h6>
+            <p style="text-align: justify;" class="text-sm">Bu kuralı, bir şube müdürünün (idari merci) verdiği acil bir kararın, genel müdürlük (hâkim) tarafından onaylanma sürecine benzetin:<br>
+            • Şube Müdürü acil kararı verir (Örn: Arama emri).<br>
+            • Karar, onay için <strong>24 saat içinde</strong> Genel Müdürlüğe gönderilmek zorundadır.<br>
+            • Genel Müdürlük, <strong>48 saat içinde</strong> bu kararı onaylamazsa, karar kendiliğinden geçersiz olur.</p>
+        </div>
+        <div class="overflow-x-auto mt-4">
+            <table class="w-full text-sm border-collapse">
+                <caption class="text-lg font-semibold text-slate-700 mb-2">24/48 Kuralının Geçerli Olduğu 5 Yer</caption>
+                <thead><tr class="bg-sky-100"><th class="border border-sky-200 p-2">Konu</th><th class="border border-sky-200 p-2">Madde</th></tr></thead>
+                <tbody class="bg-white text-center">
+                    <tr><td class="border border-sky-200 p-2">Özel Hayatın Gizliliği (Üst, Eşya Araması)</td><td class="border border-sky-200 p-2">Madde 20</td></tr>
+                    <tr class="bg-sky-50"><td class="border border-sky-200 p-2">Konut Dokunulmazlığı (Konuta Girme, Arama)</td><td class="border border-sky-200 p-2">Madde 21</td></tr>
+                    <tr><td class="border border-sky-200 p-2">Haberleşme Hürriyeti (İletişimin Tespiti)</td><td class="border border-sky-200 p-2">Madde 22</td></tr>
+                    <tr class="bg-sky-50"><td class="border border-sky-200 p-2">Basılı Eserin Dağıtımının Önlenmesi / Toplatılması</td><td class="border border-sky-200 p-2">Madde 28</td></tr>
+                     <tr><td class="border border-sky-200 p-2">Derneğin Faaliyetten Men Edilmesi</td><td class="border border-sky-200 p-2">Madde 33</td></tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="warning-box mt-4">
+             <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>Diğer "Saatlik" Süre:</h6>
+             <p style="text-align: justify;" class="text-sm"><strong>Gözaltı Süresi (Bireysel Suç):</strong> Yakalanan kişi, yol süresi hariç en geç <strong>48 saat</strong> içinde hâkim önüne çıkarılır (Madde 19).</p>
+        </div>
+    </div>
+
+    <!-- BÖLÜM 2: GÜNLERLE İFADE EDİLEN SÜREÇLER -->
+    <div class="mb-12">
+        <h4 class="text-2xl font-bold text-center mb-6 text-slate-800">Bölüm 2: Günlerle İfade Edilen Süreçler</h4>
+        <div class="overflow-x-auto">
+             <table class="w-full text-sm border-collapse">
+                 <thead><tr class="bg-sky-100"><th class="border border-sky-200 p-2">Süre</th><th class="border border-sky-200 p-2">Konu</th><th class="border border-sky-200 p-2">Madde</th></tr></thead>
+                 <tbody class="bg-white">
+                    <tr><td class="border border-sky-200 p-2 font-bold text-center">4 Gün</td><td class="border border-sky-200 p-2">Toplu suçlarda azami gözaltı süresi</td><td class="border border-sky-200 p-2">Madde 19</td></tr>
+                    <tr class="bg-sky-50"><td class="border border-sky-200 p-2 font-bold text-center">7 Gün</td><td class="border border-sky-200 p-2">Düzeltme ve cevap hakkında hâkimin karar verme süresi</td><td class="border border-sky-200 p-2">Madde 32</td></tr>
+                    <tr><td class="border border-sky-200 p-2 font-bold text-center">7 Gün</td><td class="border border-sky-200 p-2">Milletvekilliği düşmesi/dokunulmazlığın kaldırılmasına karşı AYM'ye başvuru süresi</td><td class="border border-sky-200 p-2">Madde 85</td></tr>
+                    <tr class="bg-sky-50"><td class="border border-sky-200 p-2 font-bold text-center">10 Gün</td><td class="border border-sky-200 p-2">Kanunların şekil bozukluğu için AYM'de iptal davası açma süresi</td><td class="border border-sky-200 p-2">Madde 148</td></tr>
+                    <tr><td class="border border-sky-200 p-2 font-bold text-center">15 Gün</td><td class="border border-sky-200 p-2">Cumhurbaşkanının kanunları yayımlama veya geri gönderme (veto) süresi</td><td class="border border-sky-200 p-2">Madde 89</td></tr>
+                    <tr class="bg-sky-50"><td class="border border-sky-200 p-2 font-bold text-center">15 Gün</td><td class="border border-sky-200 p-2">AYM'nin milletvekilliği ile ilgili başvuruları karara bağlama süresi</td><td class="border border-sky-200 p-2">Madde 85</td></tr>
+                     <tr><td class="border border-sky-200 p-2 font-bold text-center">60 Gün</td><td class="border border-sky-200 p-2">Kanun, CBK ve İçtüzüğün esası için AYM'de iptal davası açma süresi</td><td class="border border-sky-200 p-2">Madde 151</td></tr>
+                     <tr class="bg-sky-50"><td class="border border-sky-200 p-2 font-bold text-center">75 Gün</td><td class="border border-sky-200 p-2">Cumhurbaşkanının bütçe teklifini Meclis'e sunması (mali yılbaşından en az)</td><td class="border border-sky-200 p-2">Madde 161</td></tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <!-- BÖLÜM 3: YILLARLA İFADE EDİLEN SÜREÇLER -->
+    <div class="mb-12">
+        <h4 class="text-2xl font-bold text-center mb-6 text-slate-800">Bölüm 3: Yıllarla İfade Edilen Süreçler</h4>
+         <div class="overflow-x-auto">
+             <table class="w-full text-sm border-collapse">
+                 <thead><tr class="bg-sky-100"><th class="border border-sky-200 p-2">Süre</th><th class="border border-sky-200 p-2">Konu</th><th class="border border-sky-200 p-2">Madde</th></tr></thead>
+                 <tbody class="bg-white">
+                    <tr><td class="border border-sky-200 p-2 font-bold text-center">1 Yıl</td><td class="border border-sky-200 p-2">Seçim kanunu değişikliklerinin uygulanmama süresi ("Bir Yıl Kuralı")</td><td class="border border-sky-200 p-2">Madde 67</td></tr>
+                    <tr class="bg-sky-50"><td class="border border-sky-200 p-2 font-bold text-center">4 Yıl</td><td class="border border-sky-200 p-2">Kamu Başdenetçisi (Ombudsman) görev süresi</td><td class="border border-sky-200 p-2">Madde 74</td></tr>
+                     <tr><td class="border border-sky-200 p-2 font-bold text-center">4 Yıl</td><td class="border border-sky-200 p-2">HSK üyelerinin görev süresi</td><td class="border border-sky-200 p-2">Madde 159</td></tr>
+                     <tr class="bg-sky-50"><td class="border border-sky-200 p-2 font-bold text-center">4 Yıl</td><td class="border border-sky-200 p-2">AYM Başkanı ve Başkanvekillerinin görev süresi</td><td class="border border-sky-200 p-2">Madde 146</td></tr>
+                    <tr><td class="border border-sky-200 p-2 font-bold text-center">5 Yıl</td><td class="border border-sky-200 p-2">TBMM ve Cumhurbaşkanlığı seçimlerinin yapılma periyodu</td><td class="border border-sky-200 p-2">Madde 77</td></tr>
+                    <tr class="bg-sky-50"><td class="border border-sky-200 p-2 font-bold text-center">5 Yıl</td><td class="border border-sky-200 p-2">Parti kapatılmasına sebep olanlara uygulanan siyasi yasak süresi</td><td class="border border-sky-200 p-2">Madde 69</td></tr>
+                    <tr><td class="border border-sky-200 p-2 font-bold text-center">5 Yıl</td><td class="border border-sky-200 p-2">Kamulaştırmada azami taksitlendirme süresi</td><td class="border border-sky-200 p-2">Madde 46</td></tr>
+                     <tr class="bg-sky-50"><td class="border border-sky-200 p-2 font-bold text-center">12 Yıl</td><td class="border border-sky-200 p-2">Anayasa Mahkemesi üyelerinin görev süresi</td><td class="border border-sky-200 p-2">Madde 147</td></tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    
+     <!-- BÖLÜM 4: ANAHTAR SAYILAR VE ORANLAR -->
+    <div class="mb-12">
+        <h4 class="text-2xl font-bold text-center mb-6 text-slate-800">Bölüm 4: Anahtar Sayılar, Yaşlar ve Oranlar</h4>
+         <div class="overflow-x-auto">
+             <table class="w-full text-sm border-collapse">
+                 <thead><tr class="bg-sky-100"><th class="border border-sky-200 p-2">Sayı / Oran</th><th class="border border-sky-200 p-2">Konu</th><th class="border border-sky-200 p-2">Madde</th></tr></thead>
+                 <tbody class="bg-white">
+                    <tr><td class="border border-sky-200 p-2 font-bold text-center">18 Yaş</td><td class="border border-sky-200 p-2">Seçme, halkoylamasına katılma ve siyasi parti üyesi olma yaşı</td><td class="border border-sky-200 p-2">67, 68</td></tr>
+                    <tr class="bg-sky-50"><td class="border border-sky-200 p-2 font-bold text-center">600</td><td class="border border-sky-200 p-2">Türkiye Büyük Millet Meclisi milletvekili sayısı</td><td class="border border-sky-200 p-2">Madde 75</td></tr>
+                     <tr><td class="border border-sky-200 p-2 font-bold text-center">1/3 (200 MV)</td><td class="border border-sky-200 p-2">TBMM Toplantı Yeter Sayısı</td><td class="border border-sky-200 p-2">Madde 96</td></tr>
+                     <tr class="bg-sky-50"><td class="border border-sky-200 p-2 font-bold text-center">1/4+1 (151 MV)</td><td class="border border-sky-200 p-2">TBMM Basit Karar Yeter Sayısı (Alt Sınır)</td><td class="border border-sky-200 p-2">Madde 96</td></tr>
+                     <tr><td class="border border-sky-200 p-2 font-bold text-center">1/5 (120 MV)</td><td class="border border-sky-200 p-2">Meclis Başkanının Meclisi olağanüstü toplantıya çağırması için gereken üye sayısı</td><td class="border border-sky-200 p-2">Madde 93</td></tr>
+                      <tr class="bg-sky-50"><td class="border border-sky-200 p-2 font-bold text-center">3/5 (360 MV)</td><td class="border border-sky-200 p-2">Genel ve özel af ilanı için gereken çoğunluk</td><td class="border border-sky-200 p-2">Madde 87</td></tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
                 
 </section>
  
